--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -9,18 +9,5 @@
         android:id="@+id/searchFragment"
         android:name="com.ozancanguz.weatherapp.ui.fragments.search.SearchFragment"
         android:label="Search City"
-        tools:layout="@layout/fragment_search" >
-        <action
-            android:id="@+id/action_searchFragment_to_favoritesFragment"
-            app:destination="@id/favoritesFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/favoritesFragment"
-        android:name="com.ozancanguz.weatherapp.ui.fragments.favorites.FavoritesFragment"
-        android:label="Favorite Cities"
-        tools:layout="@layout/fragment_favorites" >
-        <action
-            android:id="@+id/action_favoritesFragment_to_searchFragment"
-            app:destination="@id/searchFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_search" />
 </navigation>
